<resources>
    <string name="app_name">Kawan Kombur</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Teguh kurniawan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="search_contact">Search Contact</string>
    <string name="butuh_kawan_bicara">Butuh Kawan Bicara ?</string>
    <string name="mulai_dengan_daftarkan_dirimu_di_kawan_kombur">Mulai dengan daftarkan dirimu di Kawan Kombur</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="jadikan_bicara_semakin_mudah_dengan_kawan_kombur">Jadikan bicara semakin mudah dengan Kawan Kombur</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="description_welcome">ayo mulai mencari kawan kombur, dan dapatkan teman</string>
    <string name="log_out">Log out</string>
    <string name="loading">loading..</string>
    <string name="ketik_username_yang_ingin_dicari">Ketik username yang ingin dicari</string>
</resources>