<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".WelcomeActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorPrimary"
            android:text="@string/welcome"/>

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textAlignment="center"
            android:text="@string/description_welcome"/>

        <ImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:src="@drawable/ic_welcome"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginEnd="5dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle" />

        </LinearLayout>

</LinearLayout>