<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".RegisterActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/register_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@android:color/white"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butuh_kawan_bicara"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mulai_dengan_daftarkan_dirimu_di_kawan_kombur"/>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="@color/colorPrimary"
                    app:mtf_image="@drawable/ic_profile">

                        <EditText
                            android:id="@+id/email_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            android:textColor="#333"
                            android:textSize="15sp"/>

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="@color/colorPrimary"
                    app:mtf_image="@drawable/ic_profile">

                    <EditText
                        android:id="@+id/username_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="Username"
                        android:textColor="#333"
                        android:textSize="15sp"/>

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="@color/colorPrimary"
                    app:mtf_image="@drawable/ic_profile">

                    <EditText
                        android:id="@+id/password_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textColor="#333"
                        android:textSize="15sp"/>

                </com.github.florent37.materialtextfield.MaterialTextField>

                <Button
                    android:id="@+id/register_button"
                    android:layout_marginTop="20dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"/>

        </LinearLayout>

</RelativeLayout>